test/testdata/classes/blank_field_assignment_error.lox
class Foo {}
var foo = Foo();
foo._ = 2; // error: _ cannot be used as a field name
